--- a/T3kCfg/Languages/chineseSimplified.txt
+++ b/T3kCfg/Languages/chineseSimplified.txt
@@ -1,10 +1,12 @@
 ﻿
+[COMMON]
+TEXT_CLOSE = 关闭
+
 [MAIN]
 APP_ERROR_MSG1 = 不能在移动设备执行
 TITLE_GENERAL_ERROR = 错误
 
 BTN_CAPTION_EXIT = 退出
-BTN_CAPTION_CLOSE = 关闭
 BTN_CAPTION_DEFAULT = 默认值
 BTN_CAPTION_REFRESH = 刷新
 MENU_TOOLTIP_START_PAGE = 起始页
@@ -123,6 +125,12 @@ TEXT_PROFILE_ITEM_MLEFT_DOWN = 左键
 TEXT_PROFILE_ITEM_MRIGHT_DOWN = 右键
 TEXT_PROFILE_ITEM_MMIDDLE_DOWN = 中间按钮
 
+[PREDEFINED PROFILE]
+TITLE_CAPTION_MANAGE = 
+TEXT_ADD = 
+TEXT_EDIT = 
+TEXT_DELETE = 
+
 [CALIBRATION SETTING]
 TITLE_CAPTION_CALIBRATION = 校准
 TEXT_SCREEN_MARGIN = 屏幕边缘
@@ -192,7 +200,6 @@ TEXT_MULTI_MONITOR_SETTING = 选择显示器...
 
 TEXT_BTN_MULTI_MONITOR_APPLY = 运用
 TEXT_BTN_MULTI_MONITOR_CANCEL = 取消
-TEXT_BTN_MULTI_MONITOR_CLOSE = 关闭
 TEXT_PRIMARY_MONITOR = 主要显示器: %d
 TEXT_NON_MULTI_MONITOR = 不支持多显示器
 
@@ -237,7 +244,6 @@ TEXT_ZOOM = 放大/缩小
 
 BTN_CAPTION_DEFAULT = 默认值
 BTN_CAPTION_REFRESH = 刷新
-BTN_CAPTION_CLOSE = 关闭
 MSGBOX_TEXT_DEFAULT = 恢复到原来的设置吗?
 MSGBOX_TITLE_DEFAULT = 确认原来的设置
 
@@ -250,7 +256,6 @@ BTN_TIMER_TEXT = %1 秒
 TITLE_CAPTION = 警告
 TEXT_MESSAGE = 警告！下一个画面包含，为了诊断传感器状态的设置数据。\n\n如果变更设置数据，触摸屏无法正常工作。
 BTN_CAPTION_CONTINUE = 继续
-BTN_CAPTION_CLOSE = 关闭
 
 [INFORMATION GATHERING]
 TITLE_CAPTION = 同意
@@ -262,7 +267,6 @@ BTN_CAPTION_CLOSE = 拒绝
 TITLE_CAPTION = 传感器诊断工具
 BTN_CAPTION_DEFAULT = 默认值
 BTN_CAPTION_REFRESH = 刷新
-BTN_CAPTION_CLOSE = 关闭
 BTN_CAPTION_SAVELOG = 保存传感器状态
 BTN_CAPTION_MAIN = 主
 BTN_CAPTION_SUB = 副
