--- a/T3kCfg/Languages/japanese.txt
+++ b/T3kCfg/Languages/japanese.txt
@@ -1,10 +1,12 @@
 ﻿
+[COMMON]
+TEXT_CLOSE = 閉じる
+
 [MAIN]
 APP_ERROR_MSG1 = 移動式装置では実行することができません。
 TITLE_GENERAL_ERROR = エラー
 
 BTN_CAPTION_EXIT = 終了
-BTN_CAPTION_CLOSE = 閉じる
 BTN_CAPTION_DEFAULT = 基本値
 BTN_CAPTION_REFRESH = リフレッシュ
 MENU_TOOLTIP_START_PAGE = スタートページ
@@ -123,6 +125,12 @@ TEXT_PROFILE_ITEM_MLEFT_DOWN = 左ボタン
 TEXT_PROFILE_ITEM_MRIGHT_DOWN = 右ボタン
 TEXT_PROFILE_ITEM_MMIDDLE_DOWN = ミドルボタン
 
+[PREDEFINED PROFILE]
+TITLE_CAPTION_MANAGE = 
+TEXT_ADD = 
+TEXT_EDIT = 
+TEXT_DELETE = 
+
 [CALIBRATION SETTING]
 TITLE_CAPTION_CALIBRATION = タッチ座標の補正
 TEXT_SCREEN_MARGIN = 画面余白
@@ -192,7 +200,6 @@ TEXT_MULTI_MONITOR_SETTING = 表示モニター選択…
 
 TEXT_BTN_MULTI_MONITOR_APPLY = 適用
 TEXT_BTN_MULTI_MONITOR_CANCEL = 取り消し
-TEXT_BTN_MULTI_MONITOR_CLOSE = 閉じる
 TEXT_PRIMARY_MONITOR = メインモニター: %d
 TEXT_NON_MULTI_MONITOR = 多重モニター未支援
 
@@ -237,7 +244,6 @@ TEXT_ZOOM = 拡大/縮小
 
 BTN_CAPTION_DEFAULT = 基本値
 BTN_CAPTION_REFRESH = リフレッシュ
-BTN_CAPTION_CLOSE = 閉じる
 MSGBOX_TEXT_DEFAULT = 初期設定値に変更しますか。
 MSGBOX_TITLE_DEFAULT = 初期設定値変更の確認
 
@@ -250,7 +256,6 @@ BTN_TIMER_TEXT = %1 秒
 TITLE_CAPTION = 警告
 TEXT_MESSAGE = 警告! 次の画面にはセンサー状態の点検のための設定値が含まれています。設定値を変更するとセンサーが正常動作しないこともあります。
 BTN_CAPTION_CONTINUE = 引き続き
-BTN_CAPTION_CLOSE = 閉じる
 
 [INFORMATION GATHERING]
 TITLE_CAPTION = 同意
@@ -262,7 +267,6 @@ BTN_CAPTION_CLOSE = 拒否する
 TITLE_CAPTION = センサー診断道具
 BTN_CAPTION_DEFAULT = 基本値
 BTN_CAPTION_REFRESH = リフレッシュ
-BTN_CAPTION_CLOSE = 閉じる
 BTN_CAPTION_SAVELOG = センサーの状態を保存
 BTN_CAPTION_MAIN = Main
 BTN_CAPTION_SUB = Sub
