--- a/T3kCfg/Languages/korean.txt
+++ b/T3kCfg/Languages/korean.txt
@@ -1,10 +1,12 @@
 ﻿
+[COMMON]
+TEXT_CLOSE = 닫기
+
 [MAIN]
 APP_ERROR_MSG1 = 이동식 장치에서는 실행 할 수 없습니다!
 TITLE_GENERAL_ERROR = 오류
 
 BTN_CAPTION_EXIT = 종료
-BTN_CAPTION_CLOSE = 닫기
 BTN_CAPTION_DEFAULT = 기본값
 BTN_CAPTION_REFRESH = 새로고침
 MENU_TOOLTIP_START_PAGE = 시작 페이지
@@ -123,6 +125,12 @@ TEXT_PROFILE_ITEM_MLEFT_DOWN = 왼쪽 버튼
 TEXT_PROFILE_ITEM_MRIGHT_DOWN = 오른쪽 버튼
 TEXT_PROFILE_ITEM_MMIDDLE_DOWN = 중간 버튼
 
+[PREDEFINED PROFILE]
+TITLE_CAPTION_MANAGE = 
+TEXT_ADD = 
+TEXT_EDIT = 
+TEXT_DELETE = 
+
 [CALIBRATION SETTING]
 TITLE_CAPTION_CALIBRATION = 터치 좌표 보정
 TEXT_SCREEN_MARGIN = 화면 여백
@@ -192,7 +200,6 @@ TEXT_MULTI_MONITOR_SETTING = 표시 모니터 선택...
 
 TEXT_BTN_MULTI_MONITOR_APPLY = 적용
 TEXT_BTN_MULTI_MONITOR_CANCEL = 취소
-TEXT_BTN_MULTI_MONITOR_CLOSE = 닫기
 TEXT_PRIMARY_MONITOR = 주 모니터 : %d
 TEXT_NON_MULTI_MONITOR = 다중 모니터 미지원
 
@@ -237,7 +244,6 @@ TEXT_ZOOM = 확대/축소
 
 BTN_CAPTION_DEFAULT = 기본값
 BTN_CAPTION_REFRESH = 새로고침
-BTN_CAPTION_CLOSE = 닫기
 MSGBOX_TEXT_DEFAULT = 초기 설정값으로 변경하시겠습니까?
 MSGBOX_TITLE_DEFAULT = 초기 설정값 변경 확인
 
@@ -250,7 +256,6 @@ BTN_TIMER_TEXT = %1 초
 TITLE_CAPTION = 경고
 TEXT_MESSAGE = 경고! 다음 화면에는 센서 상태 점검을 위한\n설정값이 포함되어 있습니다.\n\n설정값을 변경하면 센서가 정상 동작하지\n않을 수 있습니다.
 BTN_CAPTION_CONTINUE = 계속
-BTN_CAPTION_CLOSE = 닫기
 
 [INFORMATION GATHERING]
 TITLE_CAPTION = 동의
@@ -262,7 +267,6 @@ BTN_CAPTION_CLOSE = 거절
 TITLE_CAPTION = 센서 진단 도구
 BTN_CAPTION_DEFAULT = 기본값
 BTN_CAPTION_REFRESH = 새로고침
-BTN_CAPTION_CLOSE = 닫기
 BTN_CAPTION_SAVELOG = 센서 상태 저장
 BTN_CAPTION_MAIN = 주
 BTN_CAPTION_SUB = 보조
