--- a/T3kCfg/Languages/french.txt
+++ b/T3kCfg/Languages/french.txt
@@ -146,6 +146,8 @@ TEXT_PALM = Paume
 
 TEXT_CALIBRATION_WARNING = La bordure d'écran Mac OS X n'a pas été configurée dans le menu "Souris". La calibration ne peut pas fonctionner correctement.
 TEXT_CALIBRATION_WARNING2 = La bordure d'écran Mac OS X' a été vérifiée dans le menu 'Geste'. Il se peut que la calibration ne fonctionne pas correctement.
+TITLE_TOUCH_SENSITIVITY = Sensibilité au toucher
+TEXT_SENSITIVITY = Sensibilité
 
 BTN_ADVANCED = Avancé...
 
