--- a/T3kCfg/Languages/japanese.txt
+++ b/T3kCfg/Languages/japanese.txt
@@ -146,6 +146,8 @@ TEXT_PALM = 手の平
 
 TEXT_CALIBRATION_WARNING = ジェスチャーメニューから"Mac OS X Margin"が設定されていません。キャリブレーションが正常に動作しないことがあります。
 TEXT_CALIBRATION_WARNING2 = ジェスチャーメニューから"Mac OS X Margin"が設定されました。キャリブレーションが正常に動作しないことがあります。
+TITLE_TOUCH_SENSITIVITY = タッチ感度
+TEXT_SENSITIVITY = 感度
 
 BTN_ADVANCED = 高度な...
 
