--- a/T3kCfg/Languages/korean.txt
+++ b/T3kCfg/Languages/korean.txt
@@ -146,6 +146,8 @@ TEXT_PALM = 손바닥
 
 TEXT_CALIBRATION_WARNING = 제스처 메뉴에서 "Mac OS X 화면 마진"이 설정되지 않았습니다. 보정이 제대로 동작하지 않을 수 있습니다.
 TEXT_CALIBRATION_WARNING2 = 제스처 메뉴에서 "Mac OS X 화면 마진"이 설정되었습니다. 보정이 제대로 동작하지 않을 수 있습니다.
+TITLE_TOUCH_SENSITIVITY = 터치 감도
+TEXT_SENSITIVITY = 감도
 
 BTN_ADVANCED = 고급...
 
