--- a/T3kCfg/Languages/chinese.txt
+++ b/T3kCfg/Languages/chinese.txt
@@ -187,6 +187,9 @@ TEXT_OFF = 關閉
 
 TITLE_TRAY_ICON = 任务栏图标
 TEXT_CHECK_TRAYICON = 使用任务栏图标
+TEXT_CHECK_OSXGESTURE = 
+TITLE_OSXGESTURE_MSG = 
+TEXT_OSXGESTURE_MSG = 
 
 TITLE_CAPTION_TOUCH_INPUT_MODE = 觸摸輸入模式
 TEXT_INPUT_MODE = 輸入模式
