--- a/T3kCfg/Languages/japanese.txt
+++ b/T3kCfg/Languages/japanese.txt
@@ -187,6 +187,9 @@ TEXT_OFF = オフ
 
 TITLE_TRAY_ICON = トレーアイコン
 TEXT_CHECK_TRAYICON = トレーアイコン使用
+TEXT_CHECK_OSXGESTURE = 
+TITLE_OSXGESTURE_MSG = 
+TEXT_OSXGESTURE_MSG = 
 
 TITLE_CAPTION_TOUCH_INPUT_MODE = タッチ入力モード
 TEXT_INPUT_MODE = 入力モード
