--- a/T3kCfg/Languages/korean.txt
+++ b/T3kCfg/Languages/korean.txt
@@ -187,6 +187,9 @@ TEXT_OFF = 꺼짐
 
 TITLE_TRAY_ICON = 트레이 아이콘
 TEXT_CHECK_TRAYICON = 트레이 아이콘 사용
+TEXT_CHECK_OSXGESTURE = Mac OS X 제스쳐 사용
+TITLE_OSXGESTURE_MSG = 재시작
+TEXT_OSXGESTURE_MSG = 정상 동작을 위해서 재시작합니다.
 
 TITLE_CAPTION_TOUCH_INPUT_MODE = 터치 입력 모드
 TEXT_INPUT_MODE = 입력 모드
