--- a/T3kCfg/Languages/vietnamese.txt
+++ b/T3kCfg/Languages/vietnamese.txt
@@ -187,6 +187,9 @@ TEXT_OFF = Tắt
 
 TITLE_TRAY_ICON = Khay biểu tượng
 TEXT_CHECK_TRAYICON = Sử dụng khay biểu tượng
+TEXT_CHECK_OSXGESTURE = 
+TITLE_OSXGESTURE_MSG = 
+TEXT_OSXGESTURE_MSG = 
 
 TITLE_CAPTION_TOUCH_INPUT_MODE = Chế độ nhập cảm ứng
 TEXT_INPUT_MODE = Chế độ nhập
