--- a/T3kCfg/Languages/arabic.txt
+++ b/T3kCfg/Languages/arabic.txt
@@ -187,6 +187,9 @@ TEXT_OFF = إيقاف
 
 TITLE_TRAY_ICON = أيقونة علبة
 TEXT_CHECK_TRAYICON = استخدام أيقونة علبة
+TEXT_CHECK_OSXGESTURE = 
+TITLE_OSXGESTURE_MSG = 
+TEXT_OSXGESTURE_MSG = 
 
 TITLE_CAPTION_TOUCH_INPUT_MODE = وضع الإدخال اللمس
 TEXT_INPUT_MODE = وضع الإدخال
