--- a/T3kCfg/Languages/czech.txt
+++ b/T3kCfg/Languages/czech.txt
@@ -187,6 +187,9 @@ TEXT_OFF = VYP.
 
 TITLE_TRAY_ICON = Ikona v systémovém poli
 TEXT_CHECK_TRAYICON = Zobrazit ikonu
+TEXT_CHECK_OSXGESTURE = 
+TITLE_OSXGESTURE_MSG = 
+TEXT_OSXGESTURE_MSG = 
 
 TITLE_CAPTION_TOUCH_INPUT_MODE = Režim dotykového ovládání
 TEXT_INPUT_MODE = Režim
