--- a/T3kCfg/Languages/dutch.txt
+++ b/T3kCfg/Languages/dutch.txt
@@ -187,6 +187,9 @@ TEXT_OFF = Uit
 
 TITLE_TRAY_ICON = Taakbalk icoon
 TEXT_CHECK_TRAYICON = Gebruik Taakbalk icoon
+TEXT_CHECK_OSXGESTURE = 
+TITLE_OSXGESTURE_MSG = 
+TEXT_OSXGESTURE_MSG = 
 
 TITLE_CAPTION_TOUCH_INPUT_MODE = Invoermodus touch-functie
 TEXT_INPUT_MODE = Invoermodus
