--- a/T3kCfg/Languages/french.txt
+++ b/T3kCfg/Languages/french.txt
@@ -187,6 +187,9 @@ TEXT_OFF = OFF
 
 TITLE_TRAY_ICON = Icône de notification
 TEXT_CHECK_TRAYICON = Afficher l'icône de notification
+TEXT_CHECK_OSXGESTURE = 
+TITLE_OSXGESTURE_MSG = 
+TEXT_OSXGESTURE_MSG = 
 
 TITLE_CAPTION_TOUCH_INPUT_MODE = Mode de saisie de tactile
 TEXT_INPUT_MODE = Mode de saisie
