--- a/T3kCfgFE/Languages/korean.txt
+++ b/T3kCfgFE/Languages/korean.txt
@@ -31,6 +31,8 @@ TEXT_WARNING_SENSOR_DATA_IS_CHANGED = 데이터가 변경되었습니다.\r\n저
 TEXT_ERROR_WRITE_FACTORY_DEFAULT_FAILURE = [오류] 공장 초기값 저장\r\n 다시 시도하십시오!
 TEXT_WARNING_RESET_ALL_VALUES = 경고! 모든 데이터를 초기화합니다...
 TEXT_ERROR_RESET_ALL_VALUES = [오류] 초기화 실패\r\n 다시 시도하십시오!
+TEXT_WARNING_UPGRAGE_TITLE = 펌웨어 업그레이드
+TEXT_WARNING_UPGRAGE_MSG = 펌웨어 업그레이드를 하시겠습니까? 진행하면 복원할수 없습니다.
 
 BTN_CAPTION_SAVE = 저장
 BTN_CAPTION_LOAD = 열기
@@ -48,8 +50,8 @@ TITLE_CAPTION_LICENSE = 라이센스
 [MESSAGEBOX]
 BTN_CAPTION_OK = 확인
 BTN_CAPTION_CANCEL = 취소
-BTN_CAPTION_YES = 예(Y)
-BTN_CAPTION_NO = 아니오(N)
+BTN_CAPTION_YES = 예
+BTN_CAPTION_NO = 아니오
 
 [SELECT SENSOR DATA DIALOG]
 
@@ -161,8 +163,8 @@ TEXT_AREA = 영역
 
 TITLE = 제스처 프로파일
 
-TEXT_ITEM_GENERAL = Mouse
-TEXT_ITEM_WINDOWS7 = Multi-touch
+TEXT_ITEM_GENERAL = General
+TEXT_ITEM_WINDOWS7 = Windows 7
 TEXT_ITEM_MAC_OS_X = Mac OS X
 TEXT_ITEM_LINUX = Linux(GNOME)
 TEXT_ITEM_USER_DEFINED = User Defined
