--- a/T3kCfgFE/Languages/turkish.txt
+++ b/T3kCfgFE/Languages/turkish.txt
@@ -31,6 +31,8 @@ TEXT_WARNING_SENSOR_DATA_IS_CHANGED = Sensör verisi değişti.\n Kaydetmek isti
 TEXT_ERROR_WRITE_FACTORY_DEFAULT_FAILURE = [Hata] Fabrika Varsayılan Ayarına Yazın \n Yeniden Deneyin
 TEXT_WARNING_RESET_ALL_VALUES = Uyarı! Tüm değerleri sıfırlayın…
 TEXT_ERROR_RESET_ALL_VALUES = [Hata] Sıfırlama Hatası \n Yeniden deneyin!
+TEXT_WARNING_UPGRAGE_TITLE = Bellenim yükseltme
+TEXT_WARNING_UPGRAGE_MSG = Bellenim yükseltme istiyor musunuz?
 
 BTN_CAPTION_SAVE = Kaydet
 BTN_CAPTION_LOAD = Yükle
@@ -161,8 +163,8 @@ TEXT_AREA = Alan
 
 TITLE = Jest Profili
 
-TEXT_ITEM_GENERAL = Fare
-TEXT_ITEM_WINDOWS7 = Çoklu dokunma
+TEXT_ITEM_GENERAL = Genel
+TEXT_ITEM_WINDOWS7 = Windows 7
 TEXT_ITEM_MAC_OS_X = Mac OS X
 TEXT_ITEM_LINUX = Linux (GNOME)
 TEXT_ITEM_USER_DEFINED = Kullanıcı Tanımlı
